// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PossiblePasswordsContainer renders custom 1`] = `
<PossiblePasswords
  approximate={false}
  entropyBits={0}
  entropyTip={
    Object {
      "color": Object {
        "100": "#ffcdd2",
        "200": "#ef9a9a",
        "300": "#e57373",
        "400": "#ef5350",
        "50": "#ffebee",
        "500": "#f44336",
        "600": "#e53935",
        "700": "#d32f2f",
        "800": "#c62828",
        "900": "#b71c1c",
        "A100": "#ff8a80",
        "A200": "#ff5252",
        "A400": "#ff1744",
        "A700": "#d50000",
      },
      "minimum": 0,
      "strength": "Very Weak",
    }
  }
  possiblePasswords={0}
/>
`;

exports[`PossiblePasswordsContainer renders custom when invalid 1`] = `
<PossiblePasswords
  approximate={false}
  entropyBits={0}
  entropyTip={
    Object {
      "color": Object {
        "100": "#ffcdd2",
        "200": "#ef9a9a",
        "300": "#e57373",
        "400": "#ef5350",
        "50": "#ffebee",
        "500": "#f44336",
        "600": "#e53935",
        "700": "#d32f2f",
        "800": "#c62828",
        "900": "#b71c1c",
        "A100": "#ff8a80",
        "A200": "#ff5252",
        "A400": "#ff1744",
        "A700": "#d50000",
      },
      "minimum": 0,
      "strength": "Very Weak",
    }
  }
  possiblePasswords={0}
/>
`;

exports[`PossiblePasswordsContainer renders custom with strong possiblePasswords 1`] = `
<PossiblePasswords
  approximate={true}
  entropyBits={64}
  entropyTip={
    Object {
      "color": Object {
        "100": "#bbdefb",
        "200": "#90caf9",
        "300": "#64b5f6",
        "400": "#42a5f5",
        "50": "#e3f2fd",
        "500": "#2196f3",
        "600": "#1e88e5",
        "700": "#1976d2",
        "800": "#1565c0",
        "900": "#0d47a1",
        "A100": "#82b1ff",
        "A200": "#448aff",
        "A400": "#2979ff",
        "A700": "#2962ff",
      },
      "minimum": 64,
      "strength": "Strong",
    }
  }
  possiblePasswords={18446744073709552000}
/>
`;

exports[`PossiblePasswordsContainer renders custom with very strong possiblePasswords 1`] = `
<PossiblePasswords
  approximate={true}
  entropyBits={128}
  entropyTip={
    Object {
      "color": Object {
        "100": "#c8e6c9",
        "200": "#a5d6a7",
        "300": "#81c784",
        "400": "#66bb6a",
        "50": "#e8f5e9",
        "500": "#4caf50",
        "600": "#43a047",
        "700": "#388e3c",
        "800": "#2e7d32",
        "900": "#1b5e20",
        "A100": "#b9f6ca",
        "A200": "#69f0ae",
        "A400": "#00e676",
        "A700": "#00c853",
      },
      "minimum": 128,
      "strength": "Very Strong",
    }
  }
  possiblePasswords={3.402823669209385e+38}
/>
`;

exports[`PossiblePasswordsContainer renders custom with weak possiblePasswords 1`] = `
<PossiblePasswords
  approximate={false}
  entropyBits={32}
  entropyTip={
    Object {
      "color": Object {
        "100": "#fff9c4",
        "200": "#fff59d",
        "300": "#fff176",
        "400": "#ffee58",
        "50": "#fffde7",
        "500": "#ffeb3b",
        "600": "#fdd835",
        "700": "#fbc02d",
        "800": "#f9a825",
        "900": "#f57f17",
        "A100": "#ffff8d",
        "A200": "#ffff00",
        "A400": "#ffea00",
        "A700": "#ffd600",
      },
      "minimum": 32,
      "strength": "Weak",
    }
  }
  possiblePasswords={4294967296}
/>
`;

exports[`PossiblePasswordsContainer renders diceware 1`] = `
<PossiblePasswords
  approximate={true}
  entropyBits={155.09775004326937}
  entropyTip={
    Object {
      "color": Object {
        "100": "#c8e6c9",
        "200": "#a5d6a7",
        "300": "#81c784",
        "400": "#66bb6a",
        "50": "#e8f5e9",
        "500": "#4caf50",
        "600": "#43a047",
        "700": "#388e3c",
        "800": "#2e7d32",
        "900": "#1b5e20",
        "A100": "#b9f6ca",
        "A200": "#69f0ae",
        "A400": "#00e676",
        "A700": "#00c853",
      },
      "minimum": 128,
      "strength": "Very Strong",
    }
  }
  possiblePasswords={4.887367798068926e+46}
/>
`;

exports[`PossiblePasswordsContainer renders generic 1`] = `
<PossiblePasswords
  approximate={true}
  entropyBits={73.55139620333959}
  entropyTip={
    Object {
      "color": Object {
        "100": "#bbdefb",
        "200": "#90caf9",
        "300": "#64b5f6",
        "400": "#42a5f5",
        "50": "#e3f2fd",
        "500": "#2196f3",
        "600": "#1e88e5",
        "700": "#1976d2",
        "800": "#1565c0",
        "900": "#0d47a1",
        "A100": "#82b1ff",
        "A200": "#448aff",
        "A400": "#2979ff",
        "A700": "#2962ff",
      },
      "minimum": 64,
      "strength": "Strong",
    }
  }
  possiblePasswords={1.3841287201e+22}
/>
`;
